<!-- Crie este ficheiro em res/menu/bottom_nav_menu_balanced.xml -->
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/nav_messages" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search" />

    <!-- Este placeholder dá espaço para o botão flutuante -->
    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
